# rust-on-m5stickc

./: .gitpod.Dockerfile  Cargo.toml
.cargo/: config.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
docs/: README.md
examples/: example.rs
scripts/: flash.sh  run-wokwi.sh
src/: axp192.rs  button.rs  display_buffer.rs  display_st7735.rs  display_st7789.rs  lib.rs  main.rs  misc.rs  mpu6886.rs  mutex.rs  shared_bus_mutex.rs  singleton.rs
src/m5stickc/: axp192.rs  button.rs  display.rs  display_buffer.rs  misc.rs  mod.rs  mpu6886.rs  singleton.rs
