[package]
name = "m5stickc"
version = "0.1.0"
authors = ["taks <857tn859@gmail.com>"]
edition = "2021"
resolver = "2"
repository = "https://github.com/taks/rust-on-m5stickc"
license = "MIT"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["m5stickc"]

m5stickc = ["st7735-lcd"]
m5stickc_plus = ["st7789"]

[dependencies]
log = { version = "0.4", default-features = false }
anyhow = { version = "1.0.65", default-features = false }

esp-idf-sys = { version = "0.31.9", default-features = false, features = ["binstart", "panic_handler", "alloc_handler"] }
esp-idf-svc = { version = "0.42", default-features = false, features = ["alloc"] }
esp-idf-hal = { version = "0.38.1", default-features = false }
embedded-svc = { version = "0.22.1", default-features = false }
embedded-hal = { version = "1.0.0-alpha.8", default-features = false }
embedded_hal_0_2 = { package = "embedded-hal", version = "0.2.7", features = ["unproven"] }
embedded-graphics = { version = "0.7.1" }
shared-bus = { version = "0.2.4", features = ["eh-alpha"] }

display-interface = { version =  "0.4" }
display-interface-spi = {version = "0.4" }
st7789 = { version = "0.7.0", optional = true }
st7735-lcd = { git = "https://github.com/taks/st7735-lcd-rs.git", rev = "fbe6560efcf13bb26db05cca98027f18018d1346", optional = true }

[build-dependencies]
embuild = "0.29"
anyhow = "1"

[package.metadata.esp-idf-sys]
esp_idf_tools_install_dir = "global"

[package.metadata.espflash]
partition_table = "no_ota.csv"
