[package]
name = "m5stickc"
version = "0.1.0"
authors = ["taks <857tn859@gmail.com>"]
edition = "2021"
resolver = "2"
repository = "https://github.com/taks/rust-on-m5stickc"
license = "MIT"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["m5stickc"]

m5stickc = []
m5stickc_plus = []

[dependencies]
log = { version = "0.4", default-features = false }
anyhow = { version = "1.0.65", default-features = false }

esp-idf-sys = { version = "0.33", default-features = false }
esp-idf-hal = { version = "0.42", default-features = false, features = ["critical-section"] }
esp-idf-svc = { version = "0.47", default-features = false, features = ["alloc"] }
embedded-svc = { version = "0.26", default-features = false }
embedded-hal = { version = "=1.0.0-rc.1", default-features = false }
embedded_hal_0_2 = { package = "embedded-hal", version = "0.2.7", features = ["unproven"] }
embedded-hal-bus = { version = "0.1.0-rc.1", default-features = false }
embedded-graphics = { version = "0.8.1" }
critical-section = { version = "1.1.1" }

mipidsi = { git = "https://github.com/almindor/mipidsi.git", rev = "ced9a29c8fa9f99436b1e5a35ff82dabfc6c6350" }
display-interface = { version =  "0.4" }
display-interface-spi = {version = "0.4" }

[dev-dependencies]
esp-idf-sys = { version = "0.33", default-features = false, features = ["binstart", "panic_handler", "alloc_handler"] }

[build-dependencies]
embuild = "0.31.0"
anyhow = "1"

[package.metadata.esp-idf-sys]
esp_idf_tools_install_dir = "global"

[package.metadata.espflash]
partition_table = "no_ota.csv"
